--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,7 @@ events {}
 
 stream {
     upstream ssh_backend {
-        # Replace with your real SSH server
-        server gcpcdn.yopnet.dpdns.org:22;
+        server front.yopnet.dpdns.org:22;
     }
 
     server {
